--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Name Capitaliser</h1>
+    <h2>Please enter your first and last name below to begin</h2>
     <label id="nameLabel">Name:</label>
     <input type="text" id="nameInput" /><br />
-    <button id="submitButton">Submit</button>
+    <button id="submitButton">Submit</button><br />
+    <label id="result">Result:</label>
     <script src="index.js"></script>
   </body>
 </html>
